# fighting-game-platform

./: .gitignore  CMakeLists.txt  README.md  test_fighting_game  test_registry  test_rollback_engine
core/: CMakeLists.txt  README.md
core/include/games/: fighting_game.hpp
core/include/platform/: game_registry.hpp  igame.hpp  rollback_engine.hpp  types.hpp
core/src/games/: fighting_game.cpp
core/src/platform/: game_registry.cpp  rollback_engine.cpp
core/tests/: test_fighting_game.cpp  test_registry.cpp  test_rollback_engine.cpp
web/: CMakeLists.txt  export.cpp
web/public/: game_wasm.js  index.html  styles.css  test.html
web/public/src/: main.js
web/src/: input_handler.js  main.js  renderer.js
